--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -4,4 +4,25 @@ excerpt: "FAC 2022-1"
 exclude: true
 ---
 
-* **Aula 1** (06/06/2022)
+**Fundamentos de Arquitetura de Computadores - 1º Semestre de 2022**
+
+* **Professor**: John L. Gardenghi
+  + Sala 22
+  + *E-mail*: john.gardenghi@unb.br
+  + *Telegram*: @johngardenghi
+
+* **Período de aulas**: 06/06/2022 a 24/09/2022
+* **Horário das aulas**: segundas e sextas-feiras das 8h às 9h50
+* **Atendimento do professor**: segundas e sextas-feiras das 10h às 11h (sob agendamento)
+
+## Plano de ensino
+
+## Aulas
+
+* **Aula 1** (06/jun)
+  + Apresentação da disciplina
+  + Tipos de computadores
+  + Camadas de um sistema computacional
+    + Softwares de aplicação
+    + Software de sistemas
+    + Hardware
