--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -20,5 +20,14 @@ exclude: true
 Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
 ## Aulas
-
+* **Aula 2** (09/jun)
+  + Revisão de algoritmos (<a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f1_2022_1" target="_blank">Formativa 1</a>)
+<br /><br />
 * **Aula 1** (07/jun)
+  + Apresentação da disciplina e do plano de ensino
+
+## Avaliações Formativas
+
+* **Formativa 1** - Revisão de APC
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f1_2022_1" target="_blank">CD-MOJ</a>
+  + Data de Entrega: até 16/jun às 23:59
