Atualizando página de FAC

--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -17,8 +17,32 @@ exclude: true
 
 ## Plano de ensino
 
+Clique <a href="plano_fac_22_1.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
+
+## Livro-texto
+
+Todas as referências das aulas desta disciplina são do livro:
+
+> D. A. Patterson e J. L. Hennessy. Organização e projeto de computadores: a interface hardware e software. 5 ed. Elsevier, 2017. [<a href="https://integrada.minhabiblioteca.com.br/books/9788535287943" target="_blank">Biblioteca Digital da UnB</a>]
+
 ## Aulas
 
+* **Aula 4** (17/jun)
+<br /><br />
+* **Aula 3** (13/jun)
+  + Simulador <a href="http://spimsimulator.sourceforge.net/" target="_blank">SPIM</a>
+  + Operações aritméticas
+  + Registradores
+  + Estrutura de um programa em assembly MIPS
+  + Pseudoinstruções
+  + *System calls*
+  + *Referências*: <a href="2_linguagem_montagem_aula-01.pdf" target="_blank">Slides</a>
+<br /><br />
+* **Aula 2** (10/jun)
+  + Níveis de código
+  + Partes de um computador
+  + *Referências*: Seções 1.1 a 1.5.
+<br /><br />
 * **Aula 1** (06/jun)
   + Apresentação da disciplina
   + Tipos de computadores
