Atualizando página de EDA-1 e estágios

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -20,8 +20,14 @@ exclude: true
 Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
 ## Aulas
+
+* **Aula 3** (14/jun)
+  + Revisão de algoritmos (<a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f1_2022_1" target="_blank">Formativa 1</a>)
+<br /><br />
 * **Aula 2** (09/jun)
   + Revisão de algoritmos (<a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f1_2022_1" target="_blank">Formativa 1</a>)
+  + <a href="https://linux.ime.usp.br/~lucasmmg/livecd/documentacao/documentos/terminal/Terminal_basico.html" target="_blank">Comandos básicos do terminal Linux</a>
+  + <a href="https://docs.microsoft.com/pt-br/windows/wsl/install" target="_blank">Como instalar o WSL</a>
 <br /><br />
 * **Aula 1** (07/jun)
   + Apresentação da disciplina e do plano de ensino
