Atualizando página de EDA-1

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -21,6 +21,16 @@ Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 5** (23/jun)
+<br /><br />
+* **Aula 4** (21/jun)
+  + Introdução à complexidade
+    + Medida de desempenho de algoritmos
+    + Notação assintótica (*O*, *Omega* e *Theta*)
+  + <a href="https://www.ime.usp.br/~pf/analise_de_algoritmos/aulas/Oh.html" target="_blank">Comparação assintótica de funções</a>
+  + <a href="https://en.wikipedia.org/wiki/Big_O_notation" target="_blank">Artigo na Wikipedia</a> sobre notação assintótica
+  + <a href="https://towardsdatascience.com/the-math-behind-big-o-and-other-asymptotic-notations-64487889f33f" target="_blank">A matemática por trás da notação Big-O</a>
+<br /><br />
 * **Aula 3** (14/jun)
   + Revisão de algoritmos (<a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f1_2022_1" target="_blank">Formativa 1</a>)
 <br /><br />
