--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -26,8 +26,9 @@ Todas as referências das aulas desta disciplina são do livro:
 > D. A. Patterson e J. L. Hennessy. Organização e projeto de computadores: a interface hardware e software. 5 ed. Elsevier, 2017. [<a href="https://integrada.minhabiblioteca.com.br/books/9788535287943" target="_blank">Biblioteca Digital da UnB</a>]
 
 ## Aulas
-
-* **Aula 4** (17/jun)
+* **Aula 4** (20/jun)
+<br /><br />
+* ~~**Aula 4** (17/jun)~~ <a href="https://g1.globo.com/economia/noticia/2022/06/14/governo-inclui-17-de-junho-na-lista-de-pontos-facultativos-para-servidores-federais.ghtml" target="_blank">*Ponto facultativo*</a>
 <br /><br />
 * **Aula 3** (13/jun)
   + Simulador <a href="http://spimsimulator.sourceforge.net/" target="_blank">SPIM</a>
