--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -46,4 +46,4 @@ Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 * **Formativa 1** - Revisão de APC
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f1_2022_1" target="_blank">CD-MOJ</a>
-  + Data de Entrega: até 16/jun às 23:59
+  + Data de Entrega: até ~~16/jun~~ 23/jun às 23:59
