Atualizando página de EDA-1

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -21,7 +21,15 @@ Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 6** (28/jun)
+<br /><br />
 * **Aula 5** (23/jun)
+  + Exercício "Substitui" da <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f1_2022_1" target="_blank">Formativa 1</a>.
+    + Leitura de *strings* usando `scanf`
+    + Discussão da solução
+  + Introdução à complexidade
+    + Principais ordens de grandeza
+    + Regra prática para analisar algoritmos
 <br /><br />
 * **Aula 4** (21/jun)
   + Introdução à complexidade
