Atualizando página de FAC

--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -13,7 +13,7 @@ exclude: true
 
 * **Período de aulas**: 06/06/2022 a 24/09/2022
 * **Horário das aulas**: segundas e sextas-feiras das 8h às 9h50
-* **Atendimento do professor**: segundas e sextas-feiras das 10h às 11h (sob agendamento)
+* **Atendimento do professor**: sob agendamento
 
 ## Plano de ensino
 
@@ -26,7 +26,16 @@ Todas as referências das aulas desta disciplina são do livro:
 > D. A. Patterson e J. L. Hennessy. Organização e projeto de computadores: a interface hardware e software. 5 ed. Elsevier, 2017. [<a href="https://integrada.minhabiblioteca.com.br/books/9788535287943" target="_blank">Biblioteca Digital da UnB</a>]
 
 ## Aulas
+* **Aula 6** (27/jun)
+<br /><br />
+* **Aula 5** (24/jun)
+  + Instruções imediatas
+  + Representação de números inteiros
+  + *Referências*: Seções 2.3 e 2.4
+<br /><br />
 * **Aula 4** (20/jun)
+  + Instruções de acesso à memória
+  + Registradores
 <br /><br />
 * ~~**Aula 4** (17/jun)~~ <a href="https://g1.globo.com/economia/noticia/2022/06/14/governo-inclui-17-de-junho-na-lista-de-pontos-facultativos-para-servidores-federais.ghtml" target="_blank">*Ponto facultativo*</a>
 <br /><br />
@@ -37,7 +46,9 @@ Todas as referências das aulas desta disciplina são do livro:
   + Estrutura de um programa em assembly MIPS
   + Pseudoinstruções
   + *System calls*
-  + *Referências*: <a href="2_linguagem_montagem_aula-01.pdf" target="_blank">Slides</a>
+  + *Referências*:
+    + <a href="2_linguagem_montagem_aula-01.pdf" target="_blank">Slides</a>
+    + Seções 2.1 e e 2.2
 <br /><br />
 * **Aula 2** (10/jun)
   + Níveis de código
