Alterando página de APC

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -23,15 +23,23 @@ exclude: true
 
 ## Plano de ensino
 
-Em breve.
+Clique [aqui](Plano_de_Ensino_APC.pdf) para acessar o plano de ensino.
 
 ## Aulas
 
-* **Aula 2** (28/jun)
+* **Aula 3** (29/jun)
+<br /><br />
+* **Aula 2** (27/jun)
+  + Linguagens compiladas e interpretadas
+  + Variáveis e constantes
+  + *Leitura recomendada*
+    + <a href="https://www.freecodecamp.org/portuguese/news/linguagens-de-programacao-interpretadas-x-compiladas-qual-e-a-diferenca/#:~:text=Em%20uma%20linguagem%20compilada%2C%20a,l%C3%AA%20e%20executa%20o%20c%C3%B3digo" target="_blank">Linguagens compiladas e interpretadas</a>
+    + <a href="http://s3.crashworks.org.s3-website-us-east-1.amazonaws.com/if-programming-languages-were-vehicles/" target="_blank">E se linguagens de programação fossem veículos?</a>
 <br /><br />
 * **Aula 1** (24/jun)
   + Apresentação do plano de ensino
   + Introdução a algoritmos
   + Como funciona um computador
-  + <a href="https://pt.wikipedia.org/wiki/Algoritmo" target="_blank">Página sobre algoritmos na Wikipedia</a>
-  + Veja o que você <a href="https://desciclopedia.org/wiki/Programa%C3%A7%C3%A3o_Orientada_a_Gambiarras" target="_blank">**não** deve fazer nessa disciplina</a>
+  + *Leitura recomendada*
+    + <a href="https://pt.wikipedia.org/wiki/Algoritmo" target="_blank">Página sobre algoritmos na Wikipedia</a>
+    + Veja o que você <a href="https://desciclopedia.org/wiki/Programa%C3%A7%C3%A3o_Orientada_a_Gambiarras" target="_blank">**não** deve fazer nessa disciplina</a>
