Alterando página de APC

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -28,6 +28,9 @@ Clique [aqui](Plano_de_Ensino_APC.pdf) para acessar o plano de ensino.
 ## Aulas
 
 * **Aula 3** (29/jun)
+  + Funções de entrada e saída
+  + *Leitura recomendada*:
+    + Seções 2.1 a 2.3 de [[1]](#referências).
 <br /><br />
 * **Aula 2** (27/jun)
   + Linguagens compiladas e interpretadas
@@ -43,3 +46,9 @@ Clique [aqui](Plano_de_Ensino_APC.pdf) para acessar o plano de ensino.
   + *Leitura recomendada*
     + <a href="https://pt.wikipedia.org/wiki/Algoritmo" target="_blank">Página sobre algoritmos na Wikipedia</a>
     + Veja o que você <a href="https://desciclopedia.org/wiki/Programa%C3%A7%C3%A3o_Orientada_a_Gambiarras" target="_blank">**não** deve fazer nessa disciplina</a>
+
+## Referências
+
+> [1] BACKES, A. Linguagem C - Completa e Descomplicada. 2 ed. Grupo GEN, 2018. Disponível em: <a href="https://integrada.minhabiblioteca.com.br/#/books/9788535291070/" target="_blank">https://integrada.minhabiblioteca.com.br/#/books/9788535291070/</a>.
+
+Veja como acessar a biblioteca virtual da UnB <a href="https://www.bce.unb.br/wp-content/uploads/2019/02/Tutorial-Minha-Biblioteca-acesso-PC-2019-02-04.pdf" target="_blank">aqui</a>.
