Atualizando página de EDA-1

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -21,7 +21,19 @@ Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 8** (05/jul)
+  + Aplicações de ponteiros
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/pont.html" target="_blank">Endereços e ponteiros</a>
+<br /><br />
+* **Aula 7** (30/jun)
+  + Ponteiros
+    + Definição
+    + Operador `sizeof`
+    + Uso em linguagem C
+    + Operador de derreferenciamento
+<br /><br />
 * **Aula 6** (28/jun)
+  + Exemplos de análise de complexidade
 <br /><br />
 * **Aula 5** (23/jun)
   + Exercício "Substitui" da <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f1_2022_1" target="_blank">Formativa 1</a>.
