Atualizando página de FAC

--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -26,12 +26,18 @@ Todas as referências das aulas desta disciplina são do livro:
 > D. A. Patterson e J. L. Hennessy. Organização e projeto de computadores: a interface hardware e software. 5 ed. Elsevier, 2017. [<a href="https://integrada.minhabiblioteca.com.br/books/9788535287943" target="_blank">Biblioteca Digital da UnB</a>]
 
 ## Aulas
+
+* **Aula 7** (01/jul)
+<br><br>
 * **Aula 6** (27/jun)
+  + Formato de instruções
+  + Instruções lógicas
+  + *Leitura recomendada*: Seções 2.5 e 2.6
 <br /><br />
 * **Aula 5** (24/jun)
   + Instruções imediatas
   + Representação de números inteiros
-  + *Referências*: Seções 2.3 e 2.4
+  + *Leitura recomendada*: Seções 2.3 e 2.4
 <br /><br />
 * **Aula 4** (20/jun)
   + Instruções de acesso à memória
@@ -46,14 +52,14 @@ Todas as referências das aulas desta disciplina são do livro:
   + Estrutura de um programa em assembly MIPS
   + Pseudoinstruções
   + *System calls*
-  + *Referências*:
+  + *Leitura recomendada*:
     + <a href="2_linguagem_montagem_aula-01.pdf" target="_blank">Slides</a>
     + Seções 2.1 e e 2.2
 <br /><br />
 * **Aula 2** (10/jun)
   + Níveis de código
   + Partes de um computador
-  + *Referências*: Seções 1.1 a 1.5.
+  + *Leitura recomendada*: Seções 1.1 a 1.5.
 <br /><br />
 * **Aula 1** (06/jun)
   + Apresentação da disciplina
