Atualizando página de APC

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -23,14 +23,17 @@ exclude: true
 
 ## Plano de ensino
 
-Clique [aqui](Plano_de_Ensino_APC.pdf) para acessar o plano de ensino.
+Clique <a href="Plano_de_Ensino_APC.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
 ## Aulas
 
+* **Aula 4** (01/jul)
+<br><br>
 * **Aula 3** (29/jun)
   + Funções de entrada e saída
   + *Leitura recomendada*:
     + Seções 2.1 a 2.3 de [[1]](#referências).
+    + [Ambiente de desenvolvimento, compilação e execução](ambiente)
 <br /><br />
 * **Aula 2** (27/jun)
   + Linguagens compiladas e interpretadas
