Atualizando página de APC

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -27,7 +27,19 @@ Clique <a href="Plano_de_Ensino_APC.pdf" target="_blank">aqui</a> para acessar o
 
 ## Aulas
 
+* **Aula 6** (06/jul)
+<br><br>
+* **Aula 5** (04/jul)
+  + Limite de capacidade das variáveis
+  + Dúvidas sobre o `Lab1`
+  + *Leitura recomendada*:
+    + <a href="https://www.pucsp.br/~so-comp/cursoc/aulas/c320.html" target="_blank">Os tipos do C</a>
+<br><br>
 * **Aula 4** (01/jul)
+  + Operadores aritméticos
+  + Início do [`Lab1`](#laboratórios)
+  + *Leitura recomendada*:
+    + Seções 3.1 e 3.2 de [[1]](#referências).
 <br><br>
 * **Aula 3** (29/jun)
   + Funções de entrada e saída
@@ -49,6 +61,12 @@ Clique <a href="Plano_de_Ensino_APC.pdf" target="_blank">aqui</a> para acessar o
   + *Leitura recomendada*
     + <a href="https://pt.wikipedia.org/wiki/Algoritmo" target="_blank">Página sobre algoritmos na Wikipedia</a>
     + Veja o que você <a href="https://desciclopedia.org/wiki/Programa%C3%A7%C3%A3o_Orientada_a_Gambiarras" target="_blank">**não** deve fazer nessa disciplina</a>
+
+## Laboratórios
+
+* **Lab 1**: operações aritméticas
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/fga_apc_2022_01_t4_lab01" target="_blank">CD-MOJ</a>
+  + Data de entrega: até 09/jul as 00:00.
 
 ## Referências
 
