Atualizando página de FAC

--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -27,7 +27,16 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 9** (08/jul)
+<br><br>
+* **Aula 8** (04/jul)
+  + Chamada a procedimentos
+  + *Leitura recomendada*: Seção 2.8
+<br><br>
 * **Aula 7** (01/jul)
+  + Instruções de desvio
+  + Condicionais e laços
+  + *Leitura recomendada*: Seção 2.7
 <br><br>
 * **Aula 6** (27/jun)
   + Formato de instruções
