--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -21,8 +21,14 @@ Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 9** (07/jul)
+  + Avaliação Somativa 1
+<br><br>
 * **Aula 8** (05/jul)
   + Aplicações de ponteiros
+    + <a href="https://web.microsoftstream.com/video/0b127270-4078-465c-96e9-c0b60b84a2ec" target="_blank">Passagem de parâmetros por referência</a>
+    + <a href="https://web.microsoftstream.com/video/d13206d2-ad31-4343-9515-8b7a075314da" target="_blank">Alocação dinâmica de memória</a>
+    + <a href="https://web.microsoftstream.com/video/24a54429-1540-4d47-b5b1-f75a035d2f57" target="_blank">Ponteiros e vetores</a>
   + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/pont.html" target="_blank">Endereços e ponteiros</a>
 <br /><br />
 * **Aula 7** (30/jun)
@@ -67,3 +73,14 @@ Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o pla
 * **Formativa 1** - Revisão de APC
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f1_2022_1" target="_blank">CD-MOJ</a>
   + Data de Entrega: até ~~16/jun~~ 23/jun às 23:59
+
+## Para revisão
+
+* *Lista de revisão: Complexidade*
+  + Acesso: Aprender 3
+
+* *Lista de revisão: Ponteiros*
+  + Acesso: Aprender 3
+
+* **Listão** - todos os exercícios do MOJ ao longo do semestre
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_listao_2022_1" target="_blank">CD-MOJ</a>
