Atualizando página de EDA-1

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -29,6 +29,7 @@ Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o pla
     + <a href="https://web.microsoftstream.com/video/0b127270-4078-465c-96e9-c0b60b84a2ec" target="_blank">Passagem de parâmetros por referência</a>
     + <a href="https://web.microsoftstream.com/video/d13206d2-ad31-4343-9515-8b7a075314da" target="_blank">Alocação dinâmica de memória</a>
     + <a href="https://web.microsoftstream.com/video/24a54429-1540-4d47-b5b1-f75a035d2f57" target="_blank">Ponteiros e vetores</a>
+    + <a href="parametros.c" target="_blank">Exemplo feito em aula</a>
   + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/pont.html" target="_blank">Endereços e ponteiros</a>
 <br /><br />
 * **Aula 7** (30/jun)
@@ -76,10 +77,10 @@ Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Para revisão
 
-* *Lista de revisão: Complexidade*
+* **Lista de revisão: Complexidade**
   + Acesso: Aprender 3
 
-* *Lista de revisão: Ponteiros*
+* **Lista de revisão: Ponteiros**
   + Acesso: Aprender 3
 
 * **Listão** - todos os exercícios do MOJ ao longo do semestre
