Atualizando página de APC

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -27,7 +27,16 @@ Clique <a href="Plano_de_Ensino_APC.pdf" target="_blank">aqui</a> para acessar o
 
 ## Aulas
 
+* **Aula 7** (08/jul)
+<br><br>
 * **Aula 6** (06/jul)
+  + Operadores de comparação
+  + Operadores lógicos
+  + Condicionais
+  + Desvio condicionais
+  + *Leitura recomendada*:
+    + Seções 3.3, 3.4, 4.1 e 4.2 de [[1]](#referências).
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/layout.html" target="_blank">Leiaute de um código</a>
 <br><br>
 * **Aula 5** (04/jul)
   + Limite de capacidade das variáveis
