Atualizando página de APC

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -27,7 +27,14 @@ Clique <a href="Plano_de_Ensino_APC.pdf" target="_blank">aqui</a> para acessar o
 
 ## Aulas
 
+* **Aula 9** (13/jul)
+<br><br>
+* **Aula 8** (11/jul)
+  + Mais condicionais
+    + Dúvidas sobre o `Lab2`
+<br><br>
 * **Aula 7** (08/jul)
+  + Início do [`Lab2`](#laboratórios)
 <br><br>
 * **Aula 6** (06/jul)
   + Operadores de comparação
@@ -73,9 +80,13 @@ Clique <a href="Plano_de_Ensino_APC.pdf" target="_blank">aqui</a> para acessar o
 
 ## Laboratórios
 
+* **Lab 2**: desvios condicionais
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/fga_apc_2022_01_t4_lab02" target="_blank">CD-MOJ</a>
+  + Data de entrega: até 17/jul às 23:59.
+
 * **Lab 1**: operações aritméticas
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/fga_apc_2022_01_t4_lab01" target="_blank">CD-MOJ</a>
-  + Data de entrega: até 09/jul as 00:00.
+  + Data de entrega: até 09/jul às 23:59.
 
 ## Referências
 
