Atualizando página de FAC

--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -27,7 +27,17 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 11** (15/jul)
+  + Avaliação Somativa 1
+<br><br>
+* **Aula 10** (11/jul)
+  + Resolução do exercício `bitparidade`
+  + Overflow na adição de inteiros com sinal
+  + *Leitura recomendada*: Seções 3.1 e 3.2
+<br><br>
 * **Aula 9** (08/jul)
+  + Caracteres e string
+  + *Leitura recomendada*: Seções 2.9, 2.12 e 2.13
 <br><br>
 * **Aula 8** (04/jul)
   + Chamada a procedimentos
