Atualização páginas disciplinas

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -27,14 +27,30 @@ Clique <a href="Plano_de_Ensino_APC.pdf" target="_blank">aqui</a> para acessar o
 
 ## Aulas
 
+* **Aula 13** (22/jul)
+  + Prova 1
+<br><br>
+* **Aula 12** (20/jul)
+  + [Lab3](#laboratórios)
+  + Dúvidas
+<br><br>
+* **Aula 11** (18/jul)
+  + [Lab3](#laboratórios)
+  + Dúvidas
+<br><br>
+* **Aula 10** (15/jul)
+  + [Lab3](#laboratórios)
+<br><br>
 * **Aula 9** (13/jul)
+  + Laços
+  + *Leitura recomendada*: Seções 5.1, 5.2 e 5.3 de [[1]](#referências).
 <br><br>
 * **Aula 8** (11/jul)
   + Mais condicionais
-    + Dúvidas sobre o `Lab2`
+    + Dúvidas sobre o Lab2
 <br><br>
 * **Aula 7** (08/jul)
-  + Início do [`Lab2`](#laboratórios)
+  + Início do [Lab2](#laboratórios)
 <br><br>
 * **Aula 6** (06/jul)
   + Operadores de comparação
@@ -47,13 +63,13 @@ Clique <a href="Plano_de_Ensino_APC.pdf" target="_blank">aqui</a> para acessar o
 <br><br>
 * **Aula 5** (04/jul)
   + Limite de capacidade das variáveis
-  + Dúvidas sobre o `Lab1`
+  + Dúvidas sobre o Lab1
   + *Leitura recomendada*:
     + <a href="https://www.pucsp.br/~so-comp/cursoc/aulas/c320.html" target="_blank">Os tipos do C</a>
 <br><br>
 * **Aula 4** (01/jul)
   + Operadores aritméticos
-  + Início do [`Lab1`](#laboratórios)
+  + Início do [Lab1](#laboratórios)
   + *Leitura recomendada*:
     + Seções 3.1 e 3.2 de [[1]](#referências).
 <br><br>
@@ -79,6 +95,10 @@ Clique <a href="Plano_de_Ensino_APC.pdf" target="_blank">aqui</a> para acessar o
     + Veja o que você <a href="https://desciclopedia.org/wiki/Programa%C3%A7%C3%A3o_Orientada_a_Gambiarras" target="_blank">**não** deve fazer nessa disciplina</a>
 
 ## Laboratórios
+
+* **Lab 3**: laços
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/fga_apc_2022_01_t4_lab03" target="_blank">CD-MOJ</a>
+  + Data de entrega: até 23/jul às 23:59.
 
 * **Lab 2**: desvios condicionais
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/fga_apc_2022_01_t4_lab02" target="_blank">CD-MOJ</a>
