--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -27,6 +27,12 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 13** (22/jul)
+<br><br>
+* **Aula 12** (18/jul)
+  + Correção da Avaliação Somativa 1
+  + Algoritmo de multiplicação elementar
+<br><br>
 * **Aula 11** (15/jul)
   + Avaliação Somativa 1
 <br><br>
