--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -21,6 +21,17 @@ Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 12** (19/jul)
+<br><br>
+* **Aula 11** (14/jul)
+  + Exemplos de problemas recursivos
+  + Avaliação Formativa 2
+<br><br>
+* **Aula 10** (12/jul)
+  + Correção da Avaliação Somativa 1
+  + Introdução à recursão
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/recu.html" target="_blank">Recursão</a> (Prof. Paulo Feofiloff)
+<br><br>
 * **Aula 9** (07/jul)
   + Avaliação Somativa 1
 <br><br>
@@ -71,9 +82,13 @@ Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Avaliações Formativas
 
+* **Formativa 2** - Recursão
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f2_2022_1" target="_blank">CD-MOJ</a>
+  + Data de entrega: até 24/jun às 23:59
+
 * **Formativa 1** - Revisão de APC
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f1_2022_1" target="_blank">CD-MOJ</a>
-  + Data de Entrega: até ~~16/jun~~ 23/jun às 23:59
+  + Data de entrega: até ~~16/jun~~ 23/jun às 23:59
 
 ## Para revisão
 
