--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -19,6 +19,10 @@ exclude: true
 
 Clique <a href="plano_eda1_22_1.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
+## Notas
+
+Clique [aqui](notas.htm) para acessar a planilha de notas.
+
 ## Aulas
 
 * **Aula 12** (19/jul)
