Atualizando página de EDA-1

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -25,7 +25,15 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Aulas
 
+* **Aula 13** (21/jul)
+<br><br>
 * **Aula 12** (19/jul)
+  + Algoritmos de ordenação
+    + Seleção
+    + Inserção
+    + Estabilidade
+  + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/ordena.html" target="_blank">Algoritmos de ordenação elementares</a>
+  + <a href="https://visualgo.net/en/sorting" target="_blank">Animação dos principais algoritmos</a>
 <br><br>
 * **Aula 11** (14/jul)
   + Exemplos de problemas recursivos
