--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -25,6 +25,35 @@ exclude: true
 
 Clique <a href="Plano_de_Ensino_APC.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
+## Maratona-Linux
+
+O Maratona-Linux (ou NutellaBoot, para os íntimos), será o sistema utilizado para nossas avaliações em laboratório.
+
+Este sistema é utilizado para a <a href="http://maratona.sbc.org.br/" target="_blank">Maratona de Programação</a> brasileira e latino-americana, e o sistema é de autoria do <a href="https://www.brunoribas.com.br/" target="_blank">Prof. Bruno Ribas</a>. 
+
+É um sistema Ubuntu que já vem com todos os aplicativos necessários para programar em C (com mais de uma opção, inclusive). Este sistema não é *live CD*, ele se hospeda em alguma partição do disco que tenha espaço livre.
+
+**Recomendamos fortemente que os alunos façam o download deste sistema e testem antes das provas**.
+
+Para utilizar este sistema:
+
+1. Baixe a imagem <a href="https://nutellaboot.naquadah.com.br/tmp/maratonalinux-bootdisk-unb-apc.raw.gz">aqui</a>.
+
+2. Descompacte a imagem (o arquivo final terá a extensão `.raw`).
+  + Se você for usuário Windows, uma boa opção de descompactador para esse tipo de arquivo é o <a href="https://www.7-zip.org/download.html" target="_blank">7-zip</a>.<br><br>
+
+3. Grave a imagem num *pendrive* usando o <a href="https://www.balena.io/etcher/" target="_blank">Etcher</a>.
+
+4. Reinicie seu computador com o *pendrive* inserido e inicialize-o a partir dele.
+  + Geralmente, todo computador possibilita visualizar um menu de *boot* logo que o ligamos.
+  + Nos computadores do Laboratório S10 (Dell), basta pressionarmos continuamente F12 assim que ligarmos o computador.
+  + Na maioria dos computadores, é `Esc`, ou `F2`, ou `F10`, ou `F12`. Você terá que descobrir como fazer isso no seu.<br><br>
+
+5. Assim que o computador inicializar pelo *pendrive*, escolha a opção `(unb-apc) Maratona-Linux NutellaBoot - Default`.
+  + Na primeira inicialização, é necessário que o computador esteja conectado à internet por meio de um cabo de rede.<br><br>
+
+6. Aguarde alguns minutos e pronto! Ao final, pode retirar o *pendrive*.
+
 ## Aulas
 
 * **Aula 13** (22/jul)
