Atualizando página de APC

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -50,7 +50,7 @@ Para utilizar este sistema:
   + Na maioria dos computadores, é `Esc`, ou `F2`, ou `F10`, ou `F12`. Você terá que descobrir como fazer isso no seu.<br><br>
 
 5. Assim que o computador inicializar pelo *pendrive*, escolha a opção `(unb-apc) Maratona-Linux NutellaBoot - Default`.
-  + Na primeira inicialização, é necessário que o computador esteja conectado à internet por meio de um cabo de rede.<br><br>
+  + É sempre necessário que o computador esteja conectado à internet por meio de um cabo de rede.<br><br>
 
 6. Aguarde alguns minutos e pronto! Ao final, pode retirar o *pendrive*.
 
