Atualizando página de APC

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -53,6 +53,13 @@ Para utilizar este sistema:
 
 ## Aulas
 
+* **Aula 14** (25/jul)
+  + Correção da Prova 1
+  + Funções
+    + Declaração, uso, escopo e passagem de parâmetro por valor
+  + [Exemplo - potenciação](potencia.c)
+  + *Leitura recomendada*: Seções 9.1 e 9.2 de [[1]](#referências).
+<br><br>
 * **Aula 13** (22/jul)
   + Prova 1
 <br><br>
