Atualizando página de APC

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -57,7 +57,7 @@ Para utilizar este sistema:
   + Correção da Prova 1
   + Funções
     + Declaração, uso, escopo e passagem de parâmetro por valor
-  + [Exemplo - potenciação](potencia.c)
+  + <a href="potencia.c" target="_blank">Exemplo - potenciação</a>
   + *Leitura recomendada*: Seções 9.1 e 9.2 de [[1]](#referências).
 <br><br>
 * **Aula 13** (22/jul)
