Alterando página de APC

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -53,6 +53,15 @@ Para utilizar este sistema:
 
 ## Aulas
 
+* **Aula 16** (29/07)
+  + [Lab 4](#laboratórios)
+<br><br>
+* **Aula 15** (27/07)
+  + Funções
+    + Como funciona a chamada de funções
+  + Criação de bibliotecas em C (*headers* e *implementações*)
+  + <a href="apcmath" target="_blank">Exemplo - apcmath</a>
+<br><br>
 * **Aula 14** (25/jul)
   + Correção da Prova 1
   + Funções
@@ -129,9 +138,12 @@ Para utilizar este sistema:
 
 ## Laboratórios
 
+* **Lab 4**: funções
+  + Acesso: a ser publicado
+
 * **Lab 3**: laços
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/fga_apc_2022_01_t4_lab03" target="_blank">CD-MOJ</a>
-  + Data de entrega: até 23/jul às 23:59.
+  + Data de entrega: até ~~23/jul~~ 30/jul às 23:59.
 
 * **Lab 2**: desvios condicionais
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/fga_apc_2022_01_t4_lab02" target="_blank">CD-MOJ</a>
