Alterando página de APC

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -60,7 +60,7 @@ Para utilizar este sistema:
   + Funções
     + Como funciona a chamada de funções
   + Criação de bibliotecas em C (*headers* e *implementações*)
-  + <a href="apcmath" target="_blank">Exemplo - apcmath</a>
+  + <a href="apcmath.zip" target="_blank">Exemplo - apcmath</a>
 <br><br>
 * **Aula 14** (25/jul)
   + Correção da Prova 1
