Atualizando páginas das disciplinas

--- a/ensino/apc-2022-1.md
+++ b/ensino/apc-2022-1.md
@@ -53,10 +53,17 @@ Para utilizar este sistema:
 
 ## Aulas
 
-* **Aula 16** (29/07)
+* **Aula 18** (03/ago)
+  + Exercícios e dúvidas
+<br><br>
+* **Aula 17** (01/ago)
+  + Vetores
+  + *Leitura recomendada*: Capítulo 6 de [[1]](#referências).
+<br><br>
+* **Aula 16** (29/jul)
   + [Lab 4](#laboratórios)
 <br><br>
-* **Aula 15** (27/07)
+* **Aula 15** (27/jul)
   + Funções
     + Como funciona a chamada de funções
   + Criação de bibliotecas em C (*headers* e *implementações*)
@@ -139,7 +146,8 @@ Para utilizar este sistema:
 ## Laboratórios
 
 * **Lab 4**: funções
-  + Acesso: a ser publicado
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/fga_apc_2022_01_t4_lab05" target="_blank">CD-MOJ</a>
+  + Data de entrega: até 06/ago às 23:59.
 
 * **Lab 3**: laços
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/fga_apc_2022_01_t4_lab03" target="_blank">CD-MOJ</a>
