--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -25,7 +25,20 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Aulas
 
+* **Aula 16** (02/ago)
+  + Listas encadeadas
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/lista.html" target="_blank">Listas encadeadas</a>
+<br><br>
+* **Aula 15** (28/jul)
+  + 74º Reunião da SBPC
+<br><br>
+* **Aula 14** (26/jul)
+  + 74º Reunião da SBPC
+<br><br>
 * **Aula 13** (21/jul)
+  + O problema de busca
+  + Algoritmo de busca binária
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/bubi.html" target="_blank">Busca em vetor ordenado</a>
 <br><br>
 * **Aula 12** (19/jul)
   + Algoritmos de ordenação
@@ -94,9 +107,13 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Avaliações Formativas
 
+* **Formativa 3** - Ordenação e busca
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f3_2022_1" target="_blank">CD-MOJ</a>
+  + Data de entrega: até 07/ago às 23:59
+
 * **Formativa 2** - Recursão
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f2_2022_1" target="_blank">CD-MOJ</a>
-  + Data de entrega: até 24/jun às 23:59
+  + Data de entrega: até 24/jul às 23:59
 
 * **Formativa 1** - Revisão de APC
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f1_2022_1" target="_blank">CD-MOJ</a>
