--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -17,7 +17,7 @@ exclude: true
 
 ## Plano de ensino
 
-Clique <a href="plano_fac_22_1.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
+Clique <a href="plano_fac_22_1.pdf" target="_blank">aqui</a> para acessar o plano de ensino (*atualizado em 02/ago*).
 
 ## Notas
 
@@ -31,7 +31,25 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 17** (05/ago)
+  + Representação de ponto flutuante
+  + *Leitura recomendada*: Seção 3.5
+<br><br>
+* **Aula 16** (01/ago)
+  + Algoritmo de divisão
+  + Instruções `div` e `divu`
+  + *Leitura recomendada*: Seção 3.4
+<br><br>
+* **Aula 15** (29/jul)
+  + 74ª Reunião da SBPC
+<br><br>
+* **Aula 14** (25/jul)
+  + 74ª Reunião da SBPC
+<br><br>
 * **Aula 13** (22/jul)
+  + Algoritmo de multiplicação otimizado
+  + Instruções `mult` e `multu`
+  + *Leitura recomendada*: Seção 3.3
 <br><br>
 * **Aula 12** (18/jul)
   + Correção da Avaliação Somativa 1
