--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -115,3 +115,13 @@ Todas as referências das aulas desta disciplina são do livro:
     + Softwares de aplicação
     + Software de sistemas
     + Hardware
+
+## Avaliações Formativas
+
+* **Formativa 2** - Algoritmo de multiplicação de inteiros
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t01_f2_2022_1" target="_blank">CD-MOJ</a>
+  + Entrega: até 14/ago às 23:59
+<br><br>
+* **Formativa 1** - Fundamentos de assembly MIPS
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t01_f1_2022_1" target="_blank">CD-MOJ</a>
+  + Entrega: até 23/jul às 23:59
