Atualizando páginas de disciplinas

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -25,6 +25,10 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Aulas
 
+* **Aula 17** (04/ago)
+  + Listas encadeadas com nó cabeça
+  + Desenvolvimento de uma biblioteca para listas encadeadas
+<br><br>
 * **Aula 16** (02/ago)
   + Listas encadeadas
   + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/lista.html" target="_blank">Listas encadeadas</a>
