Atualizando página de EDA

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -25,9 +25,22 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Aulas
 
+* **Aula 21** (18/ago)
+  + Avaliação Somativa 2
+<br><br>
+* **Aula 20** (16/ago)
+  + Aula não-presencial (atividade a ser divulgada)
+<br><br>
+* **Aula 19** (11/ago)
+  + Pilhas
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/pilha.html" target="_blank">Pilhas</a>
+<br><br>
+* **Aula 18** (09/ago)
+  + Dúvidas sobre Avaliação Formativa 3
+<br><br>
 * **Aula 17** (04/ago)
   + Listas encadeadas com nó cabeça
-  + Desenvolvimento de uma biblioteca para listas encadeadas
+  + Desenvolvimento de uma biblioteca para listas encadeadas ([código](listasEncadeadas.zip)).
 <br><br>
 * **Aula 16** (02/ago)
   + Listas encadeadas
@@ -110,6 +123,10 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
   + Apresentação da disciplina e do plano de ensino
 
 ## Avaliações Formativas
+
+* **Formativa 4** - Listas encadeadas
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f4_2022_1" target="_blank">CD-MOJ</a>
+  + Data de entrega: até 16/ago às 23:59
 
 * **Formativa 3** - Ordenação e busca
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f3_2022_1" target="_blank">CD-MOJ</a>
