Atualizando página de EDA

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -25,15 +25,18 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Aulas
 
+* **Aula 22** (23/ago)
+  + Pilhas
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/pilha.html" target="_blank">Pilhas</a>
+<br><br>
 * **Aula 21** (18/ago)
   + Avaliação Somativa 2
 <br><br>
-* **Aula 20** (16/ago)
-  + Aula não-presencial (atividade a ser divulgada)
+* **Aula 20** (16/ago) (*não presencial*)
+  + Avaliação Formativa 4
 <br><br>
 * **Aula 19** (11/ago)
-  + Pilhas
-  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/pilha.html" target="_blank">Pilhas</a>
+  + Dúvidas e exercícios sobre Listas encadeadas
 <br><br>
 * **Aula 18** (09/ago)
   + Dúvidas sobre Avaliação Formativa 3
