Atualizando página de FAC

--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -31,6 +31,20 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 21** (19/ago)
+<br><br>
+* **Aula 20** (15/ago)
+  + Arquitetura do processador
+    + Caminho de dados de um processador
+  + [Slides](4_arquitetura-processador_aula01.pdf)
+  + *Leitura recomendada*: Seções 4.1 a 4.3
+<br><br>
+* **Aula 19** (12/ago)
+  + Avaliação Somativa 2
+<br><br>
+* **Aula 18** (08/ago)
+  + Instruções MIPS para ponto flutuante
+<br><br>
 * **Aula 17** (05/ago)
   + Representação de ponto flutuante
   + *Leitura recomendada*: Seção 3.5
