Atualizando página de EDA-1

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -25,8 +25,12 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Aulas
 
+* **Aula 23** (25/ago)
+<br><br>
 * **Aula 22** (23/ago)
-  + Pilhas
+  + Correção da Avaliação Somativa 2
+  + Pilhas com vetores
+  + Desenvolvimento de uma biblioteca para pilhas com vetores ([código](pilhasVetor.zip))
   + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/pilha.html" target="_blank">Pilhas</a>
 <br><br>
 * **Aula 21** (18/ago)
