--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -25,7 +25,18 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Aulas
 
+* **Aula 26** (06/set)
+  + Semana Universitária
+<br><br>
+* **Aula 25** (01/set)
+  + Semana Universitária
+<br><br>
+* **Aula 24** (30/ago)
+  + Semana Universitária
+<br><br>
 * **Aula 23** (25/ago)
+  + Pilhas com listas encadeadas
+  + [Código completo das bibliotecas implementadas](pilhas.zip)
 <br><br>
 * **Aula 22** (23/ago)
   + Correção da Avaliação Somativa 2
