Atualizando página de EDA-1

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -142,6 +142,10 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Avaliações Formativas
 
+* **Formativa 5** - Pilhas
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f5_2022_1" target="_blank">CD-MOJ</a>
+  + Data de entrega: até 17/set às 23:59
+
 * **Formativa 4** - Listas encadeadas
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda_t01_f4_2022_1" target="_blank">CD-MOJ</a>
   + Data de entrega: até 16/ago às 23:59
