Atualizando página de FAC

--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -31,7 +31,29 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 26** (05/set)
+<br><br>
+* **Aula 25** (02/set)
+  + Semana universitária
+<br><br>
+* **Aula 24** (29/ago)
+  + Semana universitária
+<br><br>
+* **Aula 23** (26/ago)
+  + [Slides (parte 1)](4_arquitetura-processador_aula03.pdf)
+  + [Slides (parte 2)](4_arquitetura-processador_aula04.pdf)
+  + *Leitura recomendada*: Seções 4.5 e 4.6
+<br><br>
+* **Aula 22** (22/ago)
+  + Arquitetura do processador
+    + Controle no caminho de dados
+  + [Slides](4_arquitetura-processador_aula02.pdf)
+  + *Leitura recomendada*: Seções 4.4
+<br><br>
 * **Aula 21** (19/ago)
+  + Arquitetura do processador
+    + Caminho de dados de um processador
+  + [Slides](4_arquitetura-processador_aula03.pdf)
 <br><br>
 * **Aula 20** (15/ago)
   + Arquitetura do processador
