Atualizando página de FAC

--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -48,12 +48,11 @@ Todas as referências das aulas desta disciplina são do livro:
   + Arquitetura do processador
     + Controle no caminho de dados
   + [Slides](4_arquitetura-processador_aula02.pdf)
-  + *Leitura recomendada*: Seções 4.4
+  + *Leitura recomendada*: Seção 4.4
 <br><br>
 * **Aula 21** (19/ago)
   + Arquitetura do processador
     + Caminho de dados de um processador
-  + [Slides](4_arquitetura-processador_aula03.pdf)
 <br><br>
 * **Aula 20** (15/ago)
   + Arquitetura do processador
