Atualizando página de EDA

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -25,7 +25,11 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Aulas
 
+* **Aula 27** (08/set)
+<br><br>
 * **Aula 26** (06/set)
+  + Filas em vetores
+  + Desenvolvimento de uma biblioteca para filas com vetores ([código](filasVetor.zip))
 <br><br>
 * **Aula 25** (01/set)
   + Semana Universitária
