Atualizando página de FAC

--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -31,7 +31,11 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 27** (09/set)
+<br><br>
 * **Aula 26** (05/set)
+  + Introdução à hierarquia de memória
+  + *Leitura recomendada*: Seções 5.1 e 5.2
 <br><br>
 * **Aula 25** (02/set)
   + Semana universitária
