Atualizando página de FAC

--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -31,7 +31,22 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 31** (23/set)
+  + Avaliação Somativa Substitutiva
+<br><br>
+* **Aula 30** (19/set)
+  + Avaliação Somativa 3
+<br><br>
+* **Aula 29** (16/set)
+<br><br>
+* **Aula 28** (12/set)
+  + Memória cache
+    + Mapeamento direto com blocos
+<br><br>
 * **Aula 27** (09/set)
+  + Memória cache
+    + Introdução
+    + Mapeamento direto
 <br><br>
 * **Aula 26** (05/set)
   + Introdução à hierarquia de memória
