Atualizando página de EDA-1

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -25,7 +25,21 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Aulas
 
+* **Aula 31** (22/set)
+  + Avaliação Somativa Substitutiva
+<br><br>
+* **Aula 30** (20/set)
+  + Avaliação Somativa 3
+<br><br>
+* **Aula 29** (15/set)
+  + Resolução de exercícios e dúvidas
+<br><br>
+* **Aula 28** (13/set)
+  + Resolução de exercícios e dúvidas
+<br><br>
 * **Aula 27** (08/set)
+  + Filas com listas encadeadas
+  + [Código completo de filas](filas.zip)
 <br><br>
 * **Aula 26** (06/set)
   + Filas em vetores
@@ -39,7 +53,7 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 <br><br>
 * **Aula 23** (25/ago)
   + Pilhas com listas encadeadas
-  + [Código completo das bibliotecas implementadas](pilhas.zip)
+  + [Código completo de pilhas](pilhas.zip)
 <br><br>
 * **Aula 22** (23/ago)
   + Correção da Avaliação Somativa 2
