Atualizando página de EDA-1

--- a/ensino/eda-2022-1.md
+++ b/ensino/eda-2022-1.md
@@ -40,6 +40,7 @@ Clique [aqui](notas.htm) para acessar a planilha de notas.
 * **Aula 27** (08/set)
   + Filas com listas encadeadas
   + [Código completo de filas](filas.zip)
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/fila.html" target="_blank">Filas</a>
 <br><br>
 * **Aula 26** (06/set)
   + Filas em vetores
