Atualizando página de FAC + notas

--- a/ensino/fac-2022-1.md
+++ b/ensino/fac-2022-1.md
@@ -38,6 +38,8 @@ Todas as referências das aulas desta disciplina são do livro:
   + Avaliação Somativa 3
 <br><br>
 * **Aula 29** (16/set)
+  + Tamanho real de uma memória cache
+  + *Leitura recomendada*: Seção 5.3
 <br><br>
 * **Aula 28** (12/set)
   + Memória cache
@@ -172,9 +174,13 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Avaliações Formativas
 
+* **Formativa 3** - Ponto flutuante
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t01_f3_2022_1" target="_blank">CD-MOJ</a>
+  + Entrega: até 21/ago às 23:59
+<br><br>
 * **Formativa 2** - Algoritmo de multiplicação de inteiros
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t01_f2_2022_1" target="_blank">CD-MOJ</a>
-  + Entrega: até 14/ago às 23:59
+  + Entrega: até ~~14/ago~~ 21/ago às 23:59
 <br><br>
 * **Formativa 1** - Fundamentos de assembly MIPS
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t01_f1_2022_1" target="_blank">CD-MOJ</a>
