Adicionando plano de ensino de FAC

--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -17,7 +17,7 @@ exclude: true
 
 ## Plano de ensino
 
-A ser publicado.
+Clique <a href="plano_fac_2022_2.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
 ## Livro-texto
 
