Adicionando plano de ensino de EDA-2

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -17,8 +17,9 @@ exclude: true
 
 ## Plano de ensino
 
-A publicar.
+Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
 ## Aulas
 
 * **Aula 1** (31/out)
+  + Apresentação da disciplina
