Atualizando página de EDA-2

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,5 +21,17 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 2** (04/nov)
+<br><br>
 * **Aula 1** (31/out)
   + Apresentação da disciplina
+  + Revisão de ponteiros
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/pont.html" target="_blank">Endereços e ponteiros</a>
+  + *Vídeos sugeridos*
+    + <a href="https://youtu.be/r3ooCq07dOA" target="_blank">Revisão de ponteiros</a>
+    + Aplicações de ponteiros:
+      + <a href="https://web.microsoftstream.com/video/0b127270-4078-465c-96e9-c0b60b84a2ec" target="_blank">Passagem de parâmetros</a>
+      + <a href="https://web.microsoftstream.com/video/d13206d2-ad31-4343-9515-8b7a075314da" target="_blank">Alocação dinâmica de memória</a>
+      + <a href="https://web.microsoftstream.com/video/24a54429-1540-4d47-b5b1-f75a035d2f57" target="_blank">Ponteiros e vetores</a>
+      + <a href="https://web.microsoftstream.com/video/3fa477cc-bd11-47ca-ba8c-ee7e5ba470f5" target="_blank">Ponteiros para funções</a>
