--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -27,5 +27,11 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 3** (07/nov)
+<br><br>
+* **Aula 2** (04/nov)
+  + Introdução à arquitetura de computadores
+  + *Leitura recomendada*: Seções 1.3 a 1.5
+<br><br>
 * **Aula 1** (31/out)
   + Apresentação da disciplina
